--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "cd bindings && npm run build && cd .. && electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
